<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">minipay</string>
    <string name="login">Log In</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="terms">By providing your Minipay login information, you allow Minipay to authorize future payments in accordance with this app\'s terms.</string>
</resources>