<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sdk_background"
    tools:context=".internal.ui.LoginActivity">

    <TextView
        android:id="@+id/title"
        style="@style/MinipayAndroidSdk.Text.Title.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sdk_five"
        android:gravity="start"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/email_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sdk_five"
        android:layout_marginEnd="@dimen/sdk_five"
        android:paddingTop="@dimen/sdk_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <EditText
            android:id="@+id/email"
            style="@style/MinipayAndroidSdk.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorLink="@color/sdk_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sdk_five"
        android:layout_marginEnd="@dimen/sdk_five"
        android:paddingTop="@dimen/sdk_three"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_holder">

        <EditText
            android:id="@+id/password"
            style="@style/MinipayAndroidSdk.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sdk_five"
        android:layout_marginEnd="@dimen/sdk_five"
        android:gravity="end"
        android:paddingTop="@dimen/sdk_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_holder">

        <Button
            android:id="@+id/login_button"
            style="@style/MinipayAndroidSdk.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sdk_default_button_height"
            android:enabled="false"
            android:paddingHorizontal="@dimen/sdk_three"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/terms"
        style="@style/MinipayAndroidSdk.Text.Body.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sdk_five"
        android:gravity="start"
        android:text="@string/terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_holder" />

    <TextView
        android:id="@+id/error"
        style="@style/MinipayAndroidSdk.Text.Body.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sdk_five"
        android:gravity="center"
        android:textColor="@color/sdk_failure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/MinipayAndroidSdk.ProgressBar"
        android:layout_width="@dimen/sdk_eight"
        android:layout_height="@dimen/sdk_eight"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
